2011-07-13  Ojan Vafai  <ojan@chromium.org>

        bring flakiness_dashboard.html closer to webkit style
        https://bugs.webkit.org/show_bug.cgi?id=64477

        Reviewed by Adam Barth.

        * TestResultServer/static-dashboards/dashboard_base.js:
        Fix bad variable name that would hit only when running the tests.
        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        No code/logic changes. All moving/removing brackets, indents and moving things
        to one line.

2011-07-13  Xan Lopez  <xlopez@igalia.com>

        [GTK] Fix distcheck

        Reviewed by Martin Robinson.

        * WebKitTestRunner/GNUmakefile.am: mark built sources as nodist.

2011-07-13  Joseph Pecoraro  <joepeck@webkit.org>

        Unreviewed fix. Add a "\n" to a printf that somehow got lost.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dumpApplicationCacheQuota):

2011-07-13  Joseph Pecoraro  <joepeck@webkit.org>

        ApplicationCache Quota Output is Flakey
        https://bugs.webkit.org/show_bug.cgi?id=64410

        Reviewed by Alexey Proskuryakov.

        Unify the delegate logging for reaching application cache
        quotas. Truncate the space needed to the nearest 10000
        for less flakey test output. This also better supports
        printing NSUInteger on non-64 bit systems by casting to
        an unsigned long.

        * DumpRenderTree/mac/UIDelegate.mm:
        (-[UIDelegate webView:exceededApplicationCacheOriginQuotaForSecurityOrigin:totalSpaceNeeded:]):
        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dumpApplicationCacheQuota):

2011-07-13  Dimitri Glazkov  <dglazkov@chromium.org>

        Remove unused TestExpectations._overrides.
        https://bugs.webkit.org/show_bug.cgi?id=64470

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py: Removed unused member.
